--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-react": "^6.9.0",
     "jasmine": "^2.5.2",
+    "jasmine-ajax": "^3.3.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-eslint": "^2.2.0",
     "karma-jasmine": "^1.1.0",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
